// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/integrations/ConfirmIntegration should match snapshot, bad integration type case 1`] = `""`;

exports[`components/integrations/ConfirmIntegration should match snapshot, commands case 1`] = `
<div
  className="backstage-content row"
>
  <BackstageHeader>
    <Link
      to="/team_test/integrations/commands"
    >
      <FormattedMessage
        defaultMessage="Slash Commands"
        id="installed_commands.header"
        values={Object {}}
      />
    </Link>
    <FormattedMessage
      defaultMessage="Add"
      id="integrations.add"
      values={Object {}}
    />
  </BackstageHeader>
  <div
    className="backstage-form backstage-form__confirmation"
  >
    <h4
      className="backstage-form__title"
      id="formTitle"
    >
      <FormattedMessage
        defaultMessage="Setup Successful"
        id="integrations.successful"
        values={Object {}}
      />
    </h4>
    <p>
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="Your slash command has been set up. The following token will be sent in the outgoing payload. Please use it to verify the request came from your Mattermost team (see [documentation](!https://docs.mattermost.com/developer/slash-commands.html) for further details)."
        id="add_command.doneHelp"
      />
    </p>
    <p
      className="word-break--all"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="**Token**: {token}"
        id="add_command.token"
        values={
          Object {
            "token": "jb6oyqh95irpbx8fo9zmndkp1r",
          }
        }
      />
      <CopyText
        defaultMessage="Copy"
        idMessage="integrations.copy"
        value="jb6oyqh95irpbx8fo9zmndkp1r"
      />
    </p>
    <div
      className="backstage-form__footer"
    >
      <Link
        className="btn btn-primary"
        id="doneButton"
        to="/team_test/integrations/commands"
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Done"
          id="integrations.done"
          values={Object {}}
        />
      </Link>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, incomingHooks case 1`] = `
<div
  className="backstage-content row"
>
  <BackstageHeader>
    <Link
      to="/team_test/integrations/incoming_webhooks"
    >
      <FormattedMessage
        defaultMessage="Incoming Webhooks"
        id="installed_incoming_webhooks.header"
        values={Object {}}
      />
    </Link>
    <FormattedMessage
      defaultMessage="Add"
      id="integrations.add"
      values={Object {}}
    />
  </BackstageHeader>
  <div
    className="backstage-form backstage-form__confirmation"
  >
    <h4
      className="backstage-form__title"
      id="formTitle"
    >
      <FormattedMessage
        defaultMessage="Setup Successful"
        id="integrations.successful"
        values={Object {}}
      />
    </h4>
    <p>
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="Your incoming webhook has been set up. Please send data to the following URL (see [documentation](!https://docs.mattermost.com/developer/webhooks-incoming.html) for further details)."
        id="add_incoming_webhook.doneHelp"
      />
    </p>
    <p
      className="word-break--all"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="**URL**: {url}"
        id="add_incoming_webhook.url"
        values={
          Object {
            "url": "\`http://localhost:8065/hooks/r5tpgt4iepf45jt768jz84djic\`",
          }
        }
      />
      <CopyText
        defaultMessage="Copy Client Secret"
        idMessage="integrations.copy_client_secret"
        value="http://localhost:8065/hooks/r5tpgt4iepf45jt768jz84djic"
      />
    </p>
    <div
      className="backstage-form__footer"
    >
      <Link
        className="btn btn-primary"
        id="doneButton"
        to="/team_test/integrations/incoming_webhooks"
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Done"
          id="integrations.done"
          values={Object {}}
        />
      </Link>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, oauthApps case 1`] = `
<div
  className="backstage-content row"
>
  <BackstageHeader>
    <Link
      to="/team_test/integrations/oauth2-apps"
    >
      <FormattedMessage
        defaultMessage="OAuth 2.0 Applications"
        id="installed_oauth_apps.header"
        values={Object {}}
      />
    </Link>
    <FormattedMessage
      defaultMessage="Add"
      id="integrations.add"
      values={Object {}}
    />
  </BackstageHeader>
  <div
    className="backstage-form backstage-form__confirmation"
  >
    <h4
      className="backstage-form__title"
      id="formTitle"
    >
      <FormattedMessage
        defaultMessage="Setup Successful"
        id="integrations.successful"
        values={Object {}}
      />
    </h4>
    <p
      key="add_oauth_app.doneHelp"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="Your OAuth 2.0 application has been set up. Please use the following Client ID and Client Secret when requesting authorization for your application (see [documentation](!https://docs.mattermost.com/developer/oauth-2-0-applications.html) for further details)."
        id="add_oauth_app.doneHelp"
      />
    </p>
    <p
      key="add_oauth_app.clientId"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="**Client ID**: {id}"
        id="add_oauth_app.clientId"
        values={
          Object {
            "id": "r5tpgt4iepf45jt768jz84djic",
          }
        }
      />
      <CopyText
        defaultMessage="Copy Client Id"
        idMessage="integrations.copy_client_id"
        value="r5tpgt4iepf45jt768jz84djic"
      />
      <br />
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="**Client Secret**: {secret}"
        id="add_oauth_app.clientSecret"
        values={
          Object {
            "secret": "<==secret==>",
          }
        }
      />
      <CopyText
        defaultMessage="Copy Client Secret"
        idMessage="integrations.copy_client_secret"
        value="<==secret==>"
      />
    </p>
    <p
      key="add_oauth_app.doneUrlHelp"
    >
      <FormattedMessage
        defaultMessage="The following are your authorized redirect URL(s)."
        id="add_oauth_app.doneUrlHelp"
        values={Object {}}
      />
    </p>
    <p
      className="word-break--all"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="**URL(s)**: {url}"
        id="add_oauth_app.url"
        values={
          Object {
            "url": "someCallback",
          }
        }
      />
    </p>
    <div
      className="backstage-form__footer"
    >
      <Link
        className="btn btn-primary"
        id="doneButton"
        to="/team_test/integrations/oauth2-apps"
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Done"
          id="integrations.done"
          values={Object {}}
        />
      </Link>
    </div>
  </div>
</div>
`;

exports[`components/integrations/ConfirmIntegration should match snapshot, outgoingHooks and bad identifier case 1`] = `""`;

exports[`components/integrations/ConfirmIntegration should match snapshot, outgoingHooks case 1`] = `
<div
  className="backstage-content row"
>
  <BackstageHeader>
    <Link
      to="/team_test/integrations/outgoing_webhooks"
    >
      <FormattedMessage
        defaultMessage="Outgoing Webhooks"
        id="installed_outgoing_webhooks.header"
        values={Object {}}
      />
    </Link>
    <FormattedMessage
      defaultMessage="Add"
      id="integrations.add"
      values={Object {}}
    />
  </BackstageHeader>
  <div
    className="backstage-form backstage-form__confirmation"
  >
    <h4
      className="backstage-form__title"
      id="formTitle"
    >
      <FormattedMessage
        defaultMessage="Setup Successful"
        id="integrations.successful"
        values={Object {}}
      />
    </h4>
    <p>
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="Your outgoing webhook has been set up. The following token will be sent in the outgoing payload. Please use it to verify the request came from your Mattermost team (see [documentation](!https://docs.mattermost.com/developer/webhooks-outgoing.html) for further details)."
        id="add_outgoing_webhook.doneHelp"
      />
    </p>
    <p
      className="word-break--all"
    >
      <injectIntl(FormattedMarkdownMessage)
        defaultMessage="**Token**: {token}"
        id="add_outgoing_webhook.token"
        values={
          Object {
            "token": "jb6oyqh95irpbx8fo9zmndkp1r",
          }
        }
      />
      <CopyText
        defaultMessage="Copy"
        idMessage="integrations.copy"
        value="jb6oyqh95irpbx8fo9zmndkp1r"
      />
    </p>
    <div
      className="backstage-form__footer"
    >
      <Link
        className="btn btn-primary"
        id="doneButton"
        to="/team_test/integrations/outgoing_webhooks"
        type="submit"
      >
        <FormattedMessage
          defaultMessage="Done"
          id="integrations.done"
          values={Object {}}
        />
      </Link>
    </div>
  </div>
</div>
`;
